--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": ["@rocketseat/eslint-config/next", "next/core-web-vitals"]
+  "extends": [
+    "@rocketseat/eslint-config/next",
+    "next/core-web-vitals",
+    "prettier",
+    "eslint:recommended"
+  ]
 }
