--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
-    "eslint": "^8.50.0"
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0"
   }
 }
